# Ph2_ACF_GUI

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  GUI.py  QtApplication.spec  README.md  Setup.sh  Setup_template.sh  bfrancis_notes.txt  compileSubModules.sh  config.py  example.C  fc7_ip_address.txt  gui.py  parseVariables.py  portFinder.sh  prepare_Ph2ACF.sh  recipe.txt  requirements.txt  run_Docker.sh  setup.py  setupDatabase.py  setup_custom.sh  symlinks.sh  testExampleFunction.h
.github/workflows/: docker-image.yml
BranchPeng/: binContentsNoi96.txt  binContentsNoi98.txt  binContentsTh96.txt  binContentsTh98.txt  dataPoints.txt  deltaMap.c  deltaProductMap.c  delta_noise_list.txt  delta_threshold_list.txt  processedDataPoints.txt
Configuration/: CMSIT.xml  CMSIT_RD53.txt  CMSIT_gen.xml  CMSIT_gen_OG.xml  DAQ.py  FESettings.py  HVPowerSupply.xml  HWSettings.py  XMLUtil.py  dataExtraction.py
Configuration/Config/: SingleSCC.py
Configuration/Defaults/: CMSIT.xml  CMSIT.xml.changed
Configuration/Settings/: FESettings.py  GlobalSettings.py  HWSettings.py  MonitoringSettings.py  RegisterSettings.py
FWCore/: DAQ.py  test.py
FirmwareImages/: DHT22_Sensor.ino  relay_box_firmware.ino
FirmwareImages/DHT22_Sensor/: DHT22_Sensor.ino
Gui/: CMSIT_RD53A.txt  CMSIT_RD53A.xml  CMSIT_RD53B.txt  CMSIT_RD53B.xml  CMSIT_RD53Bv1.txt  CMSIT_RD53Bv2.txt  CMSITminiDAQ.py  CMSminiDAQ_wrap.py  QtApplication.py  acfGui.py  config.py  database.py  durp.py  extractPlots.cpp  gui.py  guiUtils.py  instruments.json  out.txt  runApplication.py  settingimport.py  setupDatabase.py  siteConfig.py  siteSettings.py  siteSettings_template.py  test.db  testProcess.py
Gui/.tmp/: CMSIT_NoiseScan.xml
Gui/Config/: siteConfig.py  siteSettings.py  staticSettings.py
Gui/GUIutils/: ANSIColorText.py  AbortWindow.py  Application.py  ContinueWindow.py  CreateWindow.py  CustomizedConfigWindow.py  DBConnection.py  ErrorWindow.py  FirmwareUtil.py  GPIBInterface.py  LoginFrame.py  OpenBrowser.C  OptionFrame.py  ResultsWindow.py  ReviewModuleWindow.py  RunWindow.py  StartWindow.py  SummaryPlotter.py  bumpbond_analysis.cpp  guiUtils.py  runBrowser.sh  settingimport.py  settings.py
Gui/QtGUIutils/: CMSIT_RD53ATest.xml  LaudaApp.py  PeltiaCoolingApp.py  PeltierCoolingApp.py  PeltierTest.py  QtApplication.py  QtCustomizeWindow.py  QtDBConsoleWindow.py  QtDBTableWidget.py  QtExpertWindow.py  QtFileDialogPreview.py  QtFwCheckDetails.py  QtFwCheckWindow.py  QtFwStatusWindow.py  QtImageInsertionTab.py  QtImageViewer.py  QtImageViewerTab.py  QtLoginDialog.py  QtMatplotlibUtils.py  QtModuleReviewWindow.py  QtPowerSuppyConfig.py  QtProductionTestWindow.py  QtResultTreeWidget.py  QtRunWindow.py  QtSimplifiedMainWidget.py  QtStartWindow.py  QtSummaryWindow.py  QtTCanvasWidget.py  QtTableWidget.py  QtViewTableTab.py  QtuDTCDialog.py
Gui/icons/: PhysicsMAC.eps
Gui/jsonFiles/: instruments_osu_adcboardsldo.json  instruments_osu_oneLV.json  instruments_osu_relayboxsldo.json
Gui/python/: #1561ab589498a206dfbbd17e6c1a46c00dee2ea4#  ANSIColoringParser.py  ArduinoWidget.py  CentralDBInterface.py  CustomizedWidget.py  Firmware.py  IVCurveHandler.py  Keithley2400RS232.py  KeySightE3633RS232.py  Peltier.py  Ph2_ACF_Interface.py  QResultDialog.py  ROOTInterface.py  ResultTreeWidget.py  SLDOScanHandler.py  SimplifiedMainWidget.py  TCP.py  TCP_Interface.py  TestHandler.py  TestValidator.py  WindowAppearanceTools.py  guitest.py  import Peltier.py  logging_config.py  test.py
NetworkUtils/: .gitignore  TCPClient.cc  TCPPacket.cc  TCPPublishServer.h  TCPReceiverSocket.cc  TCPServerBase.cc  TCPSocket.cc  TCPSubscribeClient.cc  TCPTransceiverSocket.cc  TCPTransceiverSocket.h  TCPTransmitterSocket.h
UserCustoms/python/: ArduinoParser.py
data/TestResults/Test_NoiseScan/Test_Module0_NoiseScan_2023-06-06T18:16:57_UTC/: output.txt
data/TestResults/Test_NoiseScan/Test_Module0_NoiseScan_2023-06-06T18:32:50_UTC/: CMSIT.xml  output.txt
data/TestResults/Test_NoiseScan/Test_Module0_NoiseScan_2023-06-07T19:51:28_UTC/: Grade_Module0.txt  output.txt
data/TestResults/Test_NoiseScan/Test_Module0_NoiseScan_2023-06-07T19:56:33_UTC/: output.txt
example/: examplemodule.h  guiExample.py  testExampleFunction.h
pixelGui/: acfGui.py  config.py  database.py  gui.py  runTest.sh  runTest_wrap.py  setupDatabase.py  test.py
power_supply/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HVPowerSupply.xml  LVPowerSupply.xml  README.MD  setup.sh
power_supply/NetworkUtils/: CMakeLists.txt  README.md  TCPClient.cc  TCPClient.h  TCPClientBase.cc  TCPClientBase.h  TCPPacket.h  TCPPublishServer.cc  TCPReceiverSocket.h  TCPServer.cc  TCPServer.h  TCPServerBase.h  TCPSocket.h  TCPSubscribeClient.h  TCPTransmitterSocket.cc
power_supply/cmake/Modules/: FindCAENHVWrapper.cmake
power_supply/config/: KeithleyConfig.xml  KeithleyMultimeterConfig.xml  MyConfig.xml  arduino.xml  config.xml  configRohdeSchwartz.xml  config_caen.xml  config_iseg.xml  config_tti.xml  configagilent.xml  hameg.xml  ivITsldo.xml  iv_instruments_config.xml  iv_it_sldo.xml  iv_keithley_config.xml  reset_it_lv_power.xml
power_supply/documentation/: config  run.sh
power_supply/documentation/cronScript/: run.sh
power_supply/scripts/: analysisIVscan.py  plotIVKeithely.py
power_supply/src/: Arduino.cc  Arduino.h  ArduinoKIRA.cc  ArduinoKIRA.h  CAEN.cc  CAEN.h  CAENErrors.h  CAENelsFastPS.cc  CAENelsFastPS.h  CAENelsFastPSErrors.h  CMakeLists.txt  Connection.h  DeviceHandler.cc  DeviceHandler.h  EthernetConnection.cc  EthernetConnection.h  Hameg7044.cc  Hameg7044.h  ITPowerSupplyInterface.cc  ITPowerSupplyInterface.h  IsegSHR.cc  IsegSHR.h  Keithley.cc  Keithley.h  KeithleyMultimeter.cc  KeithleyMultimeter.h  KeySight.cc  KeySight.h  Multimeter.cc  Multimeter.h  PowerSupply.cc  PowerSupply.h  PowerSupplyChannel.cc  PowerSupplyChannel.h  PowerSupplyInterface.cc  PowerSupplyInterface.h  RohdeSchwarz.cc  RohdeSchwarz.h  Scope.cc  Scope.h  (+13 more)
power_supply/utils/: CMakeLists.txt  ConsoleColor.h  easylogging++.h  gui_logger.cc  gui_logger.h
(+63 files in other folders)
